--- a/pom.xml
+++ b/pom.xml
@@ -646,8 +646,8 @@
                         <driver>org.postgresql.Driver</driver>
                         <url>jdbc:postgresql://localhost:5432/planpassationms</url>
                         <defaultSchemaName>planpassationms</defaultSchemaName>
-                        <username>postgres</username>
-                        <password>passer</password>
+                        <username>fatou</username>
+                        <password>dieng</password>
                         <referenceUrl>hibernate:spring:sn.ssi.sigmap.domain?dialect=io.github.jhipster.domain.util.FixedPostgreSQL10Dialect&amp;hibernate.physical_naming_strategy=org.springframework.boot.orm.jpa.hibernate.SpringPhysicalNamingStrategy&amp;hibernate.implicit_naming_strategy=org.springframework.boot.orm.jpa.hibernate.SpringImplicitNamingStrategy</referenceUrl>
                         <verbose>true</verbose>
                         <logging>debug</logging>
