--- a/src/main/resources/config/application-prod.yml
+++ b/src/main/resources/config/application-prod.yml
@@ -40,7 +40,7 @@ spring:
       enabled: false
   datasource:
     type: com.zaxxer.hikari.HikariDataSource
-    url: jdbc:postgresql://localhost:5432/planpassationms
+    url: jdbc:postgresql://localhost:5432/planpassation
     username: fatou
     password: dieng
     hikari:
