Second commit du 01/02/2021

--- a/.yo-rc.json
+++ b/.yo-rc.json
@@ -36,7 +36,6 @@
     "languages": ["fr"],
     "blueprints": [],
     "skipClient": true,
-    "skipUserManagement": true,
-    "lastLiquibaseTimestamp": 1612785892000
+    "skipUserManagement": true
   }
 }
