Second commit du 01/02/2021

--- a/.yo-rc.json
+++ b/.yo-rc.json
@@ -36,6 +36,7 @@
     "languages": ["fr"],
     "blueprints": [],
     "skipClient": true,
-    "skipUserManagement": true
+    "skipUserManagement": true,
+    "lastLiquibaseTimestamp": 1611667300000
   }
 }
