--- a/src/main/resources/config/application-dev.yml
+++ b/src/main/resources/config/application-dev.yml
@@ -44,9 +44,9 @@ spring:
       indent-output: true
   datasource:
     type: com.zaxxer.hikari.HikariDataSource
-    url: jdbc:postgresql://localhost:5432/planpassation
-    username: fatou
-    password: dieng
+    url: jdbc:postgresql://localhost:5432/planpassationms
+    username: postgres
+    password: passer
     hikari:
       poolName: Hikari
       auto-commit: false
