--- a/src/main/resources/config/application-prod.yml
+++ b/src/main/resources/config/application-prod.yml
@@ -40,9 +40,9 @@ spring:
       enabled: false
   datasource:
     type: com.zaxxer.hikari.HikariDataSource
-    url: jdbc:postgresql://localhost:5432/planpassation
-    username: fatou
-    password: dieng
+    url: jdbc:postgresql://localhost:5432/planpassationms
+    username: postgres
+    password: passer
     hikari:
       poolName: Hikari
       auto-commit: false
